WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36566
Fix a couple of places where fill-mode needs adding to the list of shorthand properties
https://bugs.webkit.org/show_bug.cgi?id=36566
Summary
Fix a couple of places where fill-mode needs adding to the list of shorthand ...
Simon Fraser (smfr)
Reported
2010-03-24 17:31:33 PDT
Need to add CSSPropertyWebkitAnimationFillMode in CSSMutableStyleDeclaration::getPropertyValue() and initShorthandMap()
Attachments
patch for shorthand
(2.57 KB, patch)
2010-03-25 16:55 PDT
,
Dean Jackson
eric
: review-
Details
Formatted Diff
Diff
updated patch with testcase
(9.56 KB, patch)
2010-05-08 16:05 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2010-03-25 16:55:02 PDT
Created
attachment 51692
[details]
patch for shorthand Adds the longhand property into the places where the shorthand is configured.
Eric Seidel (no email)
Comment 2
2010-03-26 00:58:05 PDT
Comment on
attachment 51692
[details]
patch for shorthand We can make a CSS parsing test for this pretty easily no? Just check what getComputedStyle returns after parsing the fill mode text, no? Or just set cssText on some CSS value and see what actually gets set?
Dean Jackson
Comment 3
2010-05-08 16:04:55 PDT
> We can make a CSS parsing test for this pretty easily no? > Just check what getComputedStyle returns after parsing the fill mode text, no? > Or just set cssText on some CSS value and see what actually gets set?
That's not quite what this code does. It is only executed in two places: 1. When animating shorthand properties. Since fill-mode is an animation property itself we can't animate it, so this doesn't apply here. 2. In removeProperty(), when called on a shorthand. I've attached a test case for that.
Dean Jackson
Comment 4
2010-05-08 16:05:42 PDT
Created
attachment 55487
[details]
updated patch with testcase
Dean Jackson
Comment 5
2010-05-14 02:58:35 PDT
Landed in 59111
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug