2010-05-10  Dean Jackson  <dino@apple.com>

Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=36566
        The animation-fill-mode property was missing from
        a few places where the animation shorthand is set up.

        Test: animations/animation-shorthand-removed.html

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::getPropertyValue): Make sure
        animation-fill-mode is included in the animation shorthand
        * css/CSSPropertyLonghand.cpp:
        (WebCore::initShorthandMap):

Canonical link: https://commits.webkit.org/50350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59111 268f45cc-cd09-0410-ab3c-d52691b4dbfc